istio-mywebapp/mywebapp-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mywebapp-external-url-vs
  namespace: istio-poc
spec:
  hosts:
  - ec2-3-125-207-155.eu-central-1.compute.amazonaws.com
  gateways:
  - mywebapp-mtls-gateway
  http:
  - match:
    - uri:
        prefix: /mtls
    # rewrite:
    #   uri: "/"
    route:
    - destination:
        host: ec2-3-125-207-155.eu-central-1.compute.amazonaws.com
        port:
          number: 443
        #subset: mtls-connection
  - match:
    - uri:
        prefix: /http
    rewrite:
      uri: "/"
    route:
    - destination:
        host: ec2-3-125-207-155.eu-central-1.compute.amazonaws.com
        port:
          number: 80
